--- a/app/src/main/res/layout/view_emails.xml
+++ b/app/src/main/res/layout/view_emails.xml
@@ -12,13 +12,10 @@
         android:padding="10dp"
         android:orientation="horizontal">
         <com.google.android.material.button.MaterialButton
-            app:icon="@drawable/ic_emailAdd"
-            app:iconTint="@color/white"
-            android:paddingStart="30dp"
-            android:paddingEnd="0dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:backgroundTint="#02aff3"
+            android:text="@string/add"
             style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
             android:textColor="@color/white"
             android:layout_marginEnd="11dp" />
@@ -26,10 +23,7 @@
         <com.google.android.material.button.MaterialButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingStart="30dp"
-            android:paddingEnd="0dp"
-            app:icon="@drawable/ic_emailDelete"
-            app:iconTint="@color/white"
+            android:text="@string/delete"
             style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
             android:textColor="@color/white"
             app:backgroundTint="#FF0000"
@@ -38,7 +32,7 @@
 
 
         <com.google.android.material.button.MaterialButton
-            app:icon="@drawable/ic_emailSender"
+            app:icon="@drawable/ic_email"
             app:iconTint="@color/white"
             android:layout_width="wrap_content"
             android:layout_height="48dp"
@@ -51,7 +45,7 @@
             android:contentDescription="@string/scan" />
 
         <com.google.android.material.button.MaterialButton
-            app:icon="@drawable/ic_emailTime"
+            app:icon="@drawable/ic_timer"
             app:iconTint="@color/white"
             android:layout_width="wrap_content"
             android:layout_height="48dp"
