--- a/app/src/main/res/drawable/et_bg.xml
+++ b/app/src/main/res/drawable/et_bg.xml
@@ -2,14 +2,13 @@
     android:shape="rectangle">
 
     <corners
-        android:bottomLeftRadius="20dp"
-        android:bottomRightRadius="20dp"
-        android:topLeftRadius="20dp"
-        android:topRightRadius="20dp" />
+        android:bottomLeftRadius="10dp"
+        android:bottomRightRadius="10dp"
+        android:topLeftRadius="10dp"
+        android:topRightRadius="10dp" />
     <solid
     android:color="@color/white"/>
     <stroke
-        android:width="1dp"
-        android:color="#000000" />
+        android:color="@color/white" />
 
 </shape>
