--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,6 +18,7 @@
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
     <style name="EditTextTheme" parent="Theme.MaterialComponents.NoActionBar">
+        <item name="alertDialogTheme">@style/ThemeOverlay.MaterialComponents.Dialog.Alert</item>
         <!-- Hint color and label color in FALSE state -->
         <item name="android:textColorHint">@color/black</item>
         <item name="android:state_focused">@color/black</item>
@@ -26,6 +27,8 @@
         <item name="colorAccent">@color/black</item>
         <item name="colorControlNormal">@color/black</item>
         <item name="colorControlActivated">@color/black</item>
+
+
 
 
     </style>
