--- a/app/src/main/res/layout/views_consumable.xml
+++ b/app/src/main/res/layout/views_consumable.xml
@@ -17,6 +17,7 @@
             android:layout_height="wrap_content"
             app:backgroundTint="#02aff3"
             android:text="@string/add"
+            app:rippleColor="@color/black"
             style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
             android:textColor="@color/white"
             android:layout_marginEnd="11dp" />
@@ -26,6 +27,7 @@
             android:layout_height="48dp"
             app:backgroundTint="#02aff3"
             android:text="@string/edit"
+            app:rippleColor="@color/black"
             style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
             android:textColor="@color/white"
             android:layout_marginEnd="10dp"
@@ -38,6 +40,7 @@
             style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
             android:textColor="@color/white"
             app:backgroundTint="#FF0000"
+            app:rippleColor="@color/black"
             android:layout_marginEnd="10dp" />
 
 
