--- a/app/src/main/res/layout/views_inventory.xml
+++ b/app/src/main/res/layout/views_inventory.xml
@@ -12,7 +12,7 @@
         android:padding="10dp"
         android:orientation="horizontal">
         <com.google.android.material.button.MaterialButton
-
+            app:rippleColor="@color/black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:backgroundTint="#02aff3"
