--- a/app/src/main/res/layout/views_profile.xml
+++ b/app/src/main/res/layout/views_profile.xml
@@ -355,6 +355,7 @@
         </RelativeLayout>
 
         <com.google.android.material.button.MaterialButton
+            app:rippleColor="@color/black"
             android:id="@+id/refresh"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
