--- a/app/src/main/res/layout/views_station.xml
+++ b/app/src/main/res/layout/views_station.xml
@@ -12,7 +12,7 @@
         android:padding="10dp"
         android:orientation="horizontal">
         <com.google.android.material.button.MaterialButton
-
+            app:rippleColor="@color/black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:backgroundTint="#02aff3"
@@ -22,6 +22,7 @@
             android:layout_marginEnd="11dp" />
 
         <com.google.android.material.button.MaterialButton
+            app:rippleColor="@color/black"
             android:layout_width="wrap_content"
             android:layout_height="48dp"
             app:backgroundTint="#02aff3"
@@ -34,6 +35,7 @@
             android:contentDescription="@string/scan" />
 
         <com.google.android.material.button.MaterialButton
+            app:rippleColor="@color/black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/delete"
