--- a/app/src/main/res/layout/views_station.xml
+++ b/app/src/main/res/layout/views_station.xml
@@ -52,7 +52,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:choiceMode="singleChoice"
-        android:background="@android:color/white"
+        android:background="@color/colorPrimary"
         android:listSelector="@android:color/darker_gray" />
 
 </LinearLayout>
