--- a/app/src/main/res/layout/cardscandialog.xml
+++ b/app/src/main/res/layout/cardscandialog.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="5dp">
 
@@ -145,9 +146,10 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:background="@drawable/circleddialog"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <TextView
+            android:textColor="@color/black"
             android:id="@+id/textView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -155,16 +157,17 @@
             android:layout_marginTop="5dp"
             android:text="Card Profile"
             android:textSize="25sp"
-            android:textStyle="bold" />
+            android:fontFamily="@font/robotobold" />
 
         <TextView
+            android:textColor="@color/black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
             android:layout_marginTop="5dp"
             android:text="Details"
             android:textSize="25sp"
-            android:textStyle="bold" />
+            android:fontFamily="@font/robotobold" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -175,14 +178,15 @@
 
             <TextView
                 android:id="@+id/cardIdView1"
-                android:layout_width="match_parent"
+                android:layout_width="274dp"
                 android:layout_height="wrap_content"
-                android:ems="10"
                 android:layout_weight="1"
+                android:ems="10"
+                android:fontFamily="@font/robotobold"
                 android:gravity="start"
+                android:text="Card ID:"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                android:textColor="@android:color/black"
-                android:text="Card ID:" />
+                android:textColor="@android:color/black" />
 
             <TextView
                 android:id="@+id/cardId1"
@@ -198,26 +202,26 @@
             android:layout_marginTop="15dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:orientation="horizontal"
             >
 
             <TextView
                 android:id="@+id/serviceTypeView1"
-                android:layout_width="match_parent"
+                android:layout_width="137dp"
                 android:layout_height="wrap_content"
                 android:ems="10"
-
+                android:fontFamily="@font/robotobold"
                 android:gravity="start"
+                android:text="Service Type:"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                android:textColor="@android:color/black"
-                android:text="Service Type:" />
+                android:textColor="@android:color/black" />
 
-            <Spinner
+            <androidx.appcompat.widget.AppCompatSpinner
                 android:id="@+id/serviceType"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="0dp"
                 android:gravity="start"
                 android:entries="@array/spinnerItems"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large" />
@@ -230,46 +234,70 @@
             android:orientation="vertical"
             android:layout_marginTop="15dp">
 
-            <TextView
-                android:id="@+id/serviceLevelView1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:gravity="start"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                android:textColor="@android:color/black"
-                android:text="Service Level:" />
+<!--            <TextView-->
+<!--                android:id="@+id/serviceLevelView1"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:ems="10"-->
+<!--                android:gravity="start"-->
+<!--                android:textAppearance="@style/TextAppearance.AppCompat.Large"-->
+<!--                android:textColor="@android:color/black"-->
+<!--                android:text="Service Level:" />-->
 
-            <EditText
-                android:layout_marginTop="15dp"
-                android:id="@+id/serviceLevel1"
+<!--            <EditText-->
+<!--                android:layout_marginTop="15dp"-->
+<!--                android:id="@+id/serviceLevel1"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:ems="10"-->
+<!--                android:gravity="start"-->
+<!--                android:hint="Service Level"-->
+<!--                android:inputType="text"-->
+<!--                android:textAppearance="@style/TextAppearance.AppCompat.Medium"-->
+<!--                />-->
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:gravity="start"
-                android:hint="Service Level"
-                android:inputType="text"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:layout_height="match_parent"
+                android:theme="@style/EditTextTheme"
+                app:boxStrokeWidth="10dp"
+                app:errorEnabled="true">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/serviceLevel1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:fontFamily="@font/opensansregular"
+                    android:hint="Service Level"
+                    android:inputType="text"
+                    android:paddingLeft="15dp"
+                    android:paddingRight="15dp"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/black"
+                    android:textSize="15sp" />
                 />
+            </com.google.android.material.textfield.TextInputLayout>
 
         </LinearLayout>
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/btnSubmit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:background="@color/colorAccent"
+            android:backgroundTint="#02aff3"
             android:text="Submit"
             android:layout_gravity="center"
             android:textColor="@android:color/white" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
             android:id="@+id/btnCancel1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:background="@android:color/transparent"
+            app:strokeColor="#02aff3"
             android:text="Close"
             android:layout_gravity="center"
             android:textColor="@android:color/black" />
@@ -282,7 +310,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:background="@drawable/scanround">
+        android:background="@drawable/scanround"
+        android:visibility="gone">
 
         <TextView
             android:layout_width="wrap_content"
