--- a/app/src/main/res/layout/cardscandialog.xml
+++ b/app/src/main/res/layout/cardscandialog.xml
@@ -146,7 +146,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:background="@drawable/circleddialog"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <TextView
             android:textColor="@color/black"
@@ -185,7 +185,7 @@
                 android:fontFamily="@font/robotobold"
                 android:gravity="start"
                 android:text="Card ID:"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:textColor="@android:color/black" />
 
             <TextView
@@ -213,7 +213,7 @@
                 android:fontFamily="@font/robotobold"
                 android:gravity="start"
                 android:text="Service Type:"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:textColor="@android:color/black" />
 
             <androidx.appcompat.widget.AppCompatSpinner
@@ -320,7 +320,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:background="@drawable/scanround"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <TextView
             android:layout_width="wrap_content"
