problema nga ito

--- a/app/src/main/res/layout/cardscandialog.xml
+++ b/app/src/main/res/layout/cardscandialog.xml
@@ -236,7 +236,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:background="@drawable/circleddialog"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <TextView
             android:textColor="@color/black"
@@ -372,24 +372,25 @@
 
             <TextView
                 android:id="@+id/serviceTypeView1"
-                android:layout_width="137dp"
+                android:layout_width="107dp"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="4dp"
                 android:ems="10"
                 android:fontFamily="@font/robotoregular"
                 android:gravity="start"
-                android:text="Service Type:"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                android:textColor="@android:color/black" />
+                android:text="Service Type"
+                android:textColor="@android:color/black"
+                android:textSize="16sp" />
 
             <androidx.appcompat.widget.AppCompatSpinner
-                android:textAlignment="center"
+
                 android:id="@+id/serviceType"
-                android:layout_width="match_parent"
+                android:layout_width="118dp"
                 android:layout_height="wrap_content"
-                android:ems="10"
                 android:layout_marginTop="0dp"
-                android:gravity="start"
+                android:ems="10"
                 android:entries="@array/spinnerItems"
+                android:gravity="start"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
         </LinearLayout>
@@ -434,7 +435,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:background="@drawable/scanround"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <TextView
             android:layout_width="wrap_content"
