--- a/app/src/main/res/layout/changegeneralsettingsdialog.xml
+++ b/app/src/main/res/layout/changegeneralsettingsdialog.xml
@@ -21,7 +21,8 @@
         android:layout_marginTop="5dp"
         android:text="Edit Profile Settings"
         android:textSize="25sp"
-        android:textStyle="bold" />
+        android:fontFamily="@font/robotobold"
+        android:textColor="@color/black"/>
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
@@ -107,7 +108,6 @@
             android:fontFamily="@font/opensansbold"
             android:text="Cancel"
             android:textAllCaps="false"
-            android:textColor="#02aff3"
             android:textSize="16sp" />
     </LinearLayout>
         </LinearLayout>
