--- a/app/src/main/res/layout/changestaffsettingsdialog.xml
+++ b/app/src/main/res/layout/changestaffsettingsdialog.xml
@@ -12,6 +12,7 @@
         android:orientation="vertical"
         android:layout_gravity="center"
         android:background="@drawable/circleddialog"
+        android:visibility="gone"
         >
 
         <TextView
@@ -95,7 +96,7 @@
         android:orientation="vertical"
         android:layout_gravity="center"
         android:background="@drawable/circleddialog"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <TextView
             android:id="@+id/textView3"
@@ -105,7 +106,8 @@
             android:layout_marginTop="5dp"
             android:text="Edit Staff Account"
             android:textSize="25sp"
-            android:textStyle="bold" />
+            android:fontFamily="@font/robotobold"
+            android:textColor="@color/black"/>
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
@@ -233,7 +235,6 @@
                 android:fontFamily="@font/opensansbold"
                 android:text="Cancel"
                 android:textAllCaps="false"
-                android:textColor="#02aff3"
                 android:textSize="16sp" />
         </LinearLayout>
     </LinearLayout>
