--- a/app/src/main/res/layout/cardscandialog.xml
+++ b/app/src/main/res/layout/cardscandialog.xml
@@ -236,7 +236,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:background="@drawable/circleddialog"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <TextView
             android:textColor="@color/black"
@@ -289,26 +289,6 @@
                     android:textSize="15sp" />
 
             </com.google.android.material.textfield.TextInputLayout>
-<!--            <TextView-->
-<!--                android:id="@+id/cardIdView1"-->
-<!--                android:layout_width="287dp"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_weight="1"-->
-<!--                android:ems="10"-->
-<!--                android:fontFamily="@font/robotobold"-->
-<!--                android:gravity="start"-->
-<!--                android:text="Card ID:"-->
-<!--                android:textAppearance="@style/TextAppearance.AppCompat.Medium"-->
-<!--                android:textColor="@android:color/black" />-->
-
-<!--            <TextView-->
-<!--                android:id="@+id/cardId1"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:ems="10"-->
-<!--                android:layout_weight="1"-->
-<!--                android:gravity="start"-->
-<!--                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />-->
 
         </LinearLayout>
         <LinearLayout
@@ -317,28 +297,8 @@
             android:orientation="vertical"
             android:layout_marginTop="0dp">
 
-<!--            <TextView-->
-<!--                android:id="@+id/serviceLevelView1"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:ems="10"-->
-<!--                android:gravity="start"-->
-<!--                android:textAppearance="@style/TextAppearance.AppCompat.Large"-->
-<!--                android:textColor="@android:color/black"-->
-<!--                android:text="Service Level:" />-->
-
-<!--            <EditText-->
-<!--                android:layout_marginTop="15dp"-->
-<!--                android:id="@+id/serviceLevel1"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:ems="10"-->
-<!--                android:gravity="start"-->
-<!--                android:hint="Service Level"-->
-<!--                android:inputType="text"-->
-<!--                android:textAppearance="@style/TextAppearance.AppCompat.Medium"-->
-<!--                />-->
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/serviceLevelBox"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -435,7 +395,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:background="@drawable/scanround"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <TextView
             android:layout_width="wrap_content"
@@ -460,6 +420,67 @@
             android:background="@color/transparent"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:text="Tap the RFID Chip on the Scanner"/>
+
+        <com.google.android.material.button.MaterialButton
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            android:id="@+id/btnClose1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            app:strokeColor="#ff00"
+            android:text="@string/cancel"
+            android:layout_gravity="center"
+            android:textColor="@android:color/black" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/retry"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:background="@drawable/scanround"
+        android:visibility="gone">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="5dp"
+            android:background="@color/transparent"
+            android:text="Card Profile"
+            android:textSize="25sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:background="@color/transparent"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:text="Try Again"/>
+
+        <com.google.android.material.button.MaterialButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            app:strokeColor="@android:color/holo_blue_dark"
+            android:text="Retry"
+            android:id="@+id/buttonRetry"
+            />
+
+        <com.google.android.material.button.MaterialButton
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            android:id="@+id/btnClose3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            app:strokeColor="#ff00"
+            android:text="@string/cancel"
+            android:layout_gravity="center"
+            android:textColor="@android:color/black" />
+
+
     </LinearLayout>
 
 
