--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -163,6 +163,7 @@
             android:text="Forgot Password?"
             android:textAllCaps="true"
             android:textColor="#000000"
+            android:visibility="gone"
             style="@style/Widget.MaterialComponents.Button.TextButton"
             />
     </RelativeLayout>
